--- a/Resources/Prototypes/_Stalker/ShopPresets/factionsTorgomats/military.yml
+++ b/Resources/Prototypes/_Stalker/ShopPresets/factionsTorgomats/military.yml
@@ -481,6 +481,7 @@
         STFoodMeatSalami: 350
         CigPackBlack: 20
         CigCartonBlack: 125
+        MilitaryPSZInventoryRestock: 2000
 
     - name: Боеприпасы
       priority: 3
